--- a/src/templates/edit_proyecto.html
+++ b/src/templates/edit_proyecto.html
@@ -1,12 +1,12 @@
 <!--IMPORTAR LAYOUT-->
 {% extends "layout.html" %}
-{% block title %}Alta proyecto{% endblock %}
+{% block title %}MODIFICAR PROYECTO{% endblock %}
 <!--HOJA DE ESTILOS EXTERNA-->
 {% block customCSS %}
 <link rel="stylesheet" href="{{ url_for('static', filename='CSS/styele_alta_empresas.css') }}">
 {% endblock %}
 
-{% block titutlo %}ALTA OBRA{% endblock %}
+{% block titutlo %}MODIFICAR PROYECTO{% endblock %}
 
 
 <!--COMIENZA CONTENIDO DE PAGINA-->
@@ -132,106 +132,61 @@
                         <div class="tab-pane fade" id="direccion-tab-pane" role="tabpanel"
                             aria-labelledby="direccion-tab" tabindex="0">
                             <br>
-                            <!--Direccion de proyecto/obra-->
                             <div class="form-group row">
-                                <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                    <label for="CP" class="form-label">CP*</label>
-                                    <input type="text" value="{{ proyecto.cp }}" class="form-control" id="CP" name="CP" ma
-                                        placeholder="Código Postal" required>
+                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                    <label for="LUGAR_ENTREGA" class="form-label">DIRECION DE OBRA: </label>
+                                    <input type="text" class="form-control" id="inputDirecionObra" name="DIRECCION_OBRA" required>
                                     <div class="invalid-feedback">
-                                        COMPLETA CODIGO POSTAL
+                                        DIRECION DE OBRA
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                    <label for="ESTADO" class="form-label">ESTADO*</label>
-                                    <input type="text" class="form-control" value="{{ proyecto.estado }}" id="ESTADO" name="ESTADO"
-                                        placeholder="Estado" required>
-                                    <div class="invalid-feedback">
-                                        COMPLETA ESTADO
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                    <label for="MUNICIPIO" class="form-label">MUNICIPIO*</label>
-                                    <select style="text-align: center;" class="form-control" name="MUNICIPIO" id="MUNICIPIO" required>
-                                        <option id="selectEstados" value="">SELECIONA UN ESTADO</option>
-                                        <option value="AGUASCALIENTES"  {{ 'selected' if proyecto.municipio == "AGUASCALIENTES" else '' }} >AGUASCALIENTES</option>
-                                        <option value="BAJA CALIFORNIA" {{ 'selected' if proyecto.municipio == "BAJA CALIFORNIA" else '' }} >BAJA CALIFORNIA</option>
-                                        <option value="BAJA CALIFORNIA SUR" {{ 'selected'  if proyecto.municipio == "BAJA CALIFORNIA SUR" else '' }}>BAJA CALIFORNIA SUR</option>
-                                        <option value="CHIAPAS" {{ 'selected' if proyecto.municipio == "CHIAPAS" }}>CHIAPAS</option>
-                                        <option value="CHIHUAHUA"  {{ 'selected' if proyecto.municipio == "CHIHUAHUA" }} >CHIHUAHUA</option>
-                                        <option value="CIUDAD DE MÉXICO"  {{ 'selected' if proyecto.municipio == "CIUDAD DE MÉXICO" }} >CIUDAD DE MÉXICO</option>
-                                        <option value="COAHUILA" {{ 'selected' if proyecto.municipio == "COAHUILA" }}>COAHUILA</option>
-                                        <option value="COLIMA" {{ 'selected' if proyecto.municipio == "COLIMA" }}>COLIMA</option>
-                                        <option value="DURANGO" {{ 'selected' if proyecto.municipio == "DURANGO" }}>DURANGO</option>
-                                        <option value="ESTADO DE MÉXICO" {{ 'selected' if proyecto.municipio == "ESTADO DE MÉXICO" }}>ESTADO DE MÉXICO</option>
-                                        <option value="GUANAJUATO" {{ 'selected' if proyecto.municipio == "GUANAJUATO" }}>GUANAJUATO</option>
-                                        <option value="GUERRERO" {{ 'selected' if proyecto.municipio == "GUERRERO" }}>GUERRERO</option>
-                                        <option value="HIDALGO"  {{ 'selected' if proyecto.municipio == "HIDALGO" }} >HIDALGO</option>
-                                        <option value="JALISCO"  {{ 'selected' if proyecto.municipio == "JALISCO" }} >JALISCO</option>
-                                        <option value="MICHOACÁN" {{ 'selected' if proyecto.municipio == "MICHOACÁN" }}>MICHOACÁN</option>
-                                        <option value="MORELOS" {{ 'selected' if proyecto.municipio == "MORELOS" }}>MORELOS</option>
-                                        <option value="NAYARIT" {{ 'selected' if proyecto.municipio == "NAYARIT" }} >NAYARIT</option>
-                                        <option value="NUEVO LEÓN" {{ 'selected' if proyecto.municipio == "NUEVO LEÓN" else '' }}>NUEVO LEÓN</option>
-                                        <option value="OAXACA" {{ 'selected' if proyecto.municipio == "OAXACA" else '' }}>OAXACA</option>
-                                        <option value="PUEBLA" {{ 'selected' if proyecto.municipio == "PUEBLA" else '' }}>PUEBLA</option>
-                                        <option value="QUERÉTARO" {{ 'selected' if proyecto.municipio == "QUERÉTARO" else '' }}>QUERÉTARO</option>
-                                        <option value="QUINTANA ROO" {{ 'selected' if proyecto.municipio == "QUINTANA ROO" else '' }}>QUINTANA ROO</option>
-                                        <option value="SAN LUIS POTOSÍ" {{ 'selected' if proyecto.municipio == "SAN LUIS POTOSÍ" else '' }}>SAN LUIS POTOSÍ</option>
-                                        <option value="SIN LOCALIDAD" {{ 'selected' if proyecto.municipio == "SIN LOCALIDAD" else '' }}>SIN LOCALIDAD</option>
-                                        <option value="SINALOA" {{ 'selected' if proyecto.municipio == "SINALOA" else '' }}>SINALOA</option>
-                                        <option value="SONORA" {{ 'selected' if proyecto.municipio == "SONORA" else '' }}>SONORA</option>
-                                        <option value="TABASCO" {{ 'selected' if proyecto.municipio == "TABASCO" else '' }}>TABASCO</option>
-                                        <option value="TAMAULIPAS" {{ 'selected' if proyecto.municipio == "TAMAULIPAS" else '' }}>TAMAULIPAS</option>
-                                        <option value="TLAXCALA" {{ 'selected' if proyecto.municipio == "TLAXCALA" else '' }}>TLAXCALA</option>
-                                        <option value="VERACRUZ" {{ 'selected' if proyecto.municipio == "VERACRUZ" else '' }}>VERACRUZ</option>
-                                        <option value="YUCATÁN" {{ 'selected' if proyecto.municipio == "YUCATÁN" else '' }}>YUCATÁN</option>
-                                        <option value="ZACATECAS" {{ 'selected' if proyecto.municipio == "ZACATECAS" else '' }}>ZACATECAS</option>
-                                        <option value="ZACATECAS" {{ 'selected' if proyecto.municipio == "ZACATECAS" else '' }}>ZACATECAS</option>
-
-                                    </select>
-                                    
-                                    <div class="invalid-feedback">
-                                        COMPLETA MUNICIPIO
-                                    </div>
+                                    <label for="CALLE" class="form-label">CALLE: </label>
+                                    <input type="text" class="form-control read_only" id="inputCalle" name="CALLE" readonly>
                                 </div>
                                 <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                                    <label for="PAIS" class="form-label">PAÍS*</label>
-                                    <input type="text" class="form-control" value="{{ proyecto.pais }}"  name="PAIS" id="PAIS"
-                                        required>
-                                    <div class="invalid-feedback">
-                                        COMPLETA PAÍS
-                                    </div>
+                                    <label for="inputNumeroExterior" class="form-label">NUMERO INTERIOR: </label>
+                                    <input type="text" class="form-control text-center read_only" id="inputNumeroInterior"  name="NUMERO_INTERIOR" readonly>
                                 </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <label for="CALLE" class="form-label">CALLE*</label>
-                                    <input type="text" class="form-control" id="CALLE" value="{{proyecto.calle}}" name="CALLE" maxlength="50"
-                                        placeholder="Calle" required>
-                                    <div class="invalid-feedback">
-                                        COMPLETA CALLE
-                                    </div>
+                                <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <label for="inputNumeroExterior" class="form-label">NUMERO EXTERIOR: </label>
+                                    <input type="text" class="form-control text-center read_only" id="inputNumeroExterior" name="NUMERO_EXTERIOR">
                                 </div>
+                            </div> 
+                            <div class="row">
                                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <label for="NO_EXTERIOR" class="form-label">NO. EXTERIOR</label>
-                                    <input type="text" class="form-control" value="{{ proyecto.numero_exterior }}" name="NO_EXTERIOR" id="NO_EXTERIOR"
-                                        placeholder="Numero Exterior" required>
-                                    <div class="invalid-feedback">
-                                        COMPLETA NÚMERO EXTERIOR
-                                    </div>
+                                    <label for="inputColonia" class="form-label">COLONIA: </label>
+                                        <input type="text" class="form-control read_only" id="inputColonia" name="COLONIA"
+                                            style="text-align: center;" required>
                                 </div>
-                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                    <label for="NO_EXTERIOR" class="form-label">NO. INTERIOR</label>
-                                    <input type="text" class="form-control" value="{{ proyecto.numero_interior }}" name="NO_INTERIOR" id="NO_INTERIOR"
-                                        placeholder="Numero Interior">
+                                <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <label for="ESTADO" class="form-label">ESTADO: </label>
+                                    <input type="text" class="form-control read_only" id="inputEstado" name="ESTADO">
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <label for="CIUDAD" class="form-label">MUNICIPIO: </label>
+                                    <input type="text" class="form-control read_only" id="inputCiudad" name="MUNICIPIO">
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                                    <label for="CALLE" class="form-label">CP: </label>
+                                    <input type="text" class="form-control read_only" id="inputCp" name="CP">
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                                     <label for="centro_comercial" class="form-label">CENTRO COMERCIAL</label>
-                                    <input type="text" class="form-control" value="{{proyecto.centro_comercial}}" name="centro_comercial"
-                                        id="centro_comercial" placeholder="Enter value">
+                                    <input type="text" class="form-control" value="" name="centro_comercial" id="centro_comercial" placeholder="Enter value">
+                                </div>
+                            </div> 
+                            <div class="row">
+                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                    <label for="LATITUD" class="form-label">LATITUD: </label>
+                                    <input class="form-control" name="LATITUD" id="LATITUD" value="{{ proyecto.latitud }}" required>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                    <label for="LONGITUD" class="form-label">LONGITUD: </label>
+                                    <input class="form-control" name="LONGITUD" id="LONGITUD" value="{{ proyecto.longitud }}" required>
                                 </div>
                             </div>
-                            <!--Fin de direccion proyecto/obra-->
+                           
                         </div>
                         <div class="tab-pane fade" id="ejecutiva-tab-pane" role="tabpanel"
                             aria-labelledby="ejecutiva-tab" tabindex="0">
