--- a/src/templates/altaPresupuestos.html
+++ b/src/templates/altaPresupuestos.html
@@ -340,7 +340,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th scope="row">DIRECTOR DE OBRA:</th>
+                            <th scope="row" style="text-align: right;">DIRECTOR DE OBRA:</th>
                             <td>
                                 <input type="text" class="form-control read_only" id="DIRECTOR" name="DIRECTOR" readonly>
                                 <input type="text" style="display: none;" class="form-control form-control-sm" id="ID_DIRECTOR" name="ID_DIRECTOR">
