--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -267,6 +267,7 @@
                  });
              });
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5d1sYQrIOy1ZYlN-pgQkZsEIuZWTRNfI&libraries=places&callback=initMap" async defer></script>
      
 </body>
 
