--- a/src/templates/empleados.html
+++ b/src/templates/empleados.html
@@ -162,8 +162,8 @@
         </a>
     </div>
     <br>
-    <div class="table-container ">
-        <table class="table table-hover resizable-table">
+    <div class="table-container">
+        <table class="table table-hover">
             <colgroup>
                 <col style="width: 50px;">
                 <col style="width: 200px;">
@@ -185,7 +185,7 @@
             </thead>
             <tbody>
                {% for e in empleados %}
-               <tr class="{% if e.is_blocked %}table-secondary{% endif %}">
+               <tr class="">
                     <td>{{ e.id }}</td>
                     <td>{{ e.nombre }}</td>
                     <td>{{ e.apellido }}</td>
